Fixed button right alignment issue in wp-5.9 version

--- a/packages/block-library/src/buttons/style.scss
+++ b/packages/block-library/src/buttons/style.scss
@@ -63,7 +63,8 @@ $blocks-block__margin: 0.5em;
 		.is-content-justification-right,
 		.is-content-justification-left,
 		.is-content-justification-center
-	) .wp-block-button.aligncenter {
+	) .wp-block-button.aligncenter,
+	.wp-block-button.alignright {
 	/* stylelint-enable indentation */
 		margin-left: auto;
 		margin-right: auto;
@@ -75,3 +76,8 @@ $blocks-block__margin: 0.5em;
 .wp-block-button.aligncenter {
 	text-align: center;
 }
+
+.wp-block-button.alignright {
+	text-align: right;
+}
+
